[gd_scene load_steps=3 format=3 uid="uid://q5ak32mxsxfd"]

[ext_resource type="Script" path="res://parts/WireColor.gd" id="3_42xq1"]
[ext_resource type="PackedScene" uid="uid://cebba5vujpuxs" path="res://scenes/color_picker.tscn" id="4_7a7ti"]

[node name="WireColor" type="GraphNode"]
offset_right = 20.0
offset_bottom = 20.0
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
script = ExtResource("3_42xq1")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[node name="ColorPicker" parent="." instance=ExtResource("4_7a7ti")]
visible = false

[node name="Tag" type="Label" parent="."]
visible = false
layout_mode = 2

[connection signal="gui_input" from="ColorRect" to="." method="_on_color_rect_gui_input"]
[connection signal="changed_color" from="ColorPicker" to="." method="_on_color_picker_changed_color"]
